--- a/luvhavencove-store/.env.template
+++ b/luvhavencove-store/.env.template
@@ -10,6 +10,7 @@ STORE_CORS=http://localhost,http://localhost:8000,${STORE_CORS}
 ADMIN_CORS=http://localhost,http://localhost:7001,${ADMIN_CORS}
 # MEDUSA_ADMIN_BACKEND_URL is the URL to the backend used by the client side admin UI
 MEDUSA_ADMIN_BACKEND_URL=${MEDUSA_ADMIN_BACKEND_URL}
+MEDUSA_ADMIN_STOREFRONT_URL=${MEDUSA_ADMIN_STOREFRONT_URL}
 MEDUSA_ADMIN_ONBOARDING_NEXTJS_DIRECTORY=luvhavencove-store-storefront
 
 # REDIS_URL is in the Docker network, update credentials in /docker/secrets/redis.conf accordingly
@@ -28,3 +29,6 @@ PAYPAL_SANDBOX=true
 PAYPAL_CLIENT_ID=${PAYPAL_CLIENT_ID}
 PAYPAL_CLIENT_SECRET=
 PAYPAL_AUTH_WEBHOOK_ID=${PAYPAL_AUTH_WEBHOOK_ID}
+
+STRIPE_API_KEY=
+STRIPE_WEBHOOK_SECRET=
