--- a/.env.template
+++ b/.env.template
@@ -10,6 +10,8 @@ POSTGRES_USER=postgres
 POSTGRES_PASSWORD=postgres
 POSTGRES_DB=luvhavencove
 
+VOLUME_MOUNT=
+
 # Backend variables start
 JWT_SECRET=something
 COOKIE_SECRET=something
@@ -29,3 +31,7 @@ MEILISEARCH_MASTER_KEY=meilisearch
 PAYPAL_CLIENT_ID=paypal
 PAYPAL_CLIENT_SECRET=paypal
 PAYPAL_AUTH_WEBHOOK_ID=paypal
+
+STRIPE_API_KEY=stripe
+STRIPE_WEBHOOK_SECRET=stripe
+STRIPE_PUBLIC_KEY=stripe
