--- a/luvhavencove-store-storefront/.env.template
+++ b/luvhavencove-store-storefront/.env.template
@@ -9,7 +9,7 @@ NEXT_PUBLIC_ADMIN_URL=${NEXT_PUBLIC_ADMIN_URL}
 NEXT_PUBLIC_DEFAULT_REGION=us
 
 # Your Stripe public key. See – https://docs.medusajs.com/add-plugins/stripe
-NEXT_PUBLIC_STRIPE_KEY=
+NEXT_PUBLIC_STRIPE_KEY=${STRIPE_PUBLIC_KEY}
 
 # Your PayPal Client ID. See – https://docs.medusajs.com/add-plugins/paypal
 NEXT_PUBLIC_PAYPAL_CLIENT_ID=${PAYPAL_CLIENT_ID}
