--- a/luvhavencove-store/.env.production.template
+++ b/luvhavencove-store/.env.production.template
@@ -29,3 +29,6 @@ PAYPAL_SANDBOX=true
 PAYPAL_CLIENT_ID=${PAYPAL_CLIENT_ID}
 PAYPAL_CLIENT_SECRET=
 PAYPAL_AUTH_WEBHOOK_ID=${PAYPAL_AUTH_WEBHOOK_ID}
+
+STRIPE_API_KEY=
+STRIPE_WEBHOOK_SECRET=
